--- a/css/style.css
+++ b/css/style.css
@@ -74,9 +74,7 @@ li.active {
 }
 
 .banner-div img {
-    width: 100px;
-    max-width: 100%;
-    min-width: 100%;
+    width: 5em;
 }
 
 .products-div {
