--- a/css/style.css
+++ b/css/style.css
@@ -167,10 +167,10 @@ footer p {
 }
 
 #banner-txt {
-    margin-top: 40px;
+    margin-top: 70px;
     opacity: 0;
     font-size: 1.5rem;
-    margin-left: 14%;
+    margin-left: 15%;
 }
 
 .banner-img1 {
@@ -221,46 +221,7 @@ footer p {
     text-align: center;
 }
 
-.comments{
-    background: rgba(0,0,0,0.7);
-    margin-bottom: 10px; 
-}
 
-.comment-template{
-    display: grid;
-    grid-auto-flow: column;
-    grid-template-columns: 1fr 4fr 1fr;
-}
-
-.comment-info{
-    display: grid;
-    grid-auto-flow: column;
-    grid-template-rows: 1fr;
-    grid-template-columns: 1fr 1fr; 
-}
-
-.comment-text{
-    display: grid;
-    width: 100px;
-}
-
-.comment-profile{
-    display: grid;
-    text-align: center
-}
-
-.comment-star{
-    margin: 5px;
-    margin-top: 15px;
-    display: grid;
-    grid-gap: 25px;
-    width: 70px;
-}
-
-.comment-img{
-    font-size: 2rem;
-    margin-top: 1rem;
-}
 
 form{
     text-align: center;
@@ -295,6 +256,13 @@ form{
 
 @media  (max-width: 660px){
     #banner-txt{
+         margin-top: 40px;
         font-size: 4vw;
+    }
+}
+
+@media  (max-width: 800px){
+    #banner-txt{
+         margin-top: 40px;
     }
 }
